[package]
name = "srch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
content_inspector = "0.2.4"

[profile.dev]
opt-level = 3
lto = "fat"
incremental = true
debug = 0