[package]
name = "srch"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
content_inspector = "0.2.4"

[profile.dev]
opt-level = 3
lto = "fat"
incremental = true
debug = 0